--- a/src/tab.html
+++ b/src/tab.html
@@ -1,6 +1,5 @@
 <template>
   <li key={tab.id} class={isActive} title="Pos" role="presentation">
-    <a class="slds-tabs_scoped__link" role="tab" tabindex={tabIndex} aria-selected={selected}
-      aria-controls="tab-scoped">{tab.name}</a>
+    <a class="slds-tabs_scoped__link" role="tab" tabindex={tabIndex} aria-selected={selected}>{tab.name}</a>
   </li>
 </template>
