--- a/src/app.html
+++ b/src/app.html
@@ -3,48 +3,17 @@
 	</br>
 	<div class="demo-only">
 		<div class="slds-tabs_scoped">
-			<ul class="slds-tabs_scoped__nav padding-nav" role="tablist">
+			<ul class="slds-tabs_scoped__nav padding_nav" role="tablist">
 				<template for:each={tabs} for:item="tab" for:index="index">
-					<c-tab key={tab.id} data-index={index} selected-tab={selectedTab} position={index} tab={tab}
+					<c-tab key={tab.tabId} data-index={index} selected-tab={selectedTab} position={index} tab={tab}
 						onclick={handleItemClicked}></c-tab>
 				</template>
 			</ul>
-
-
-
-			<div id="tab-scoped" class="slds-tabs_scoped__content slds-show" role="tabpanel">
-				Item One Content
-
-
-
+			<div id="tab-scoped" class="slds-tabs_scoped__content slds-show padding-content" role="tabpanel">
+				<c-table tabs={tabs}></c-table>
 			</div>
 
 		</div>
-	</div>
-	</br>
-
-
-	<div class="slds-tabs_scoped">
-		<ul class="slds-tabs_scoped__nav" role="tablist">
-			<li class="slds-tabs_scoped__item" title="Item One" role="presentation">
-				<a class="slds-tabs_scoped__link" href="javascript:void(0);" role="tab" tabindex="-1" aria-selected="false"
-					aria-controls="tab-scoped-1" id="tab-scoped-1__item">Item One</a>
-			</li>
-			<li class="slds-tabs_scoped__item slds-is-active" title="Item Two" role="presentation">
-				<a class="slds-tabs_scoped__link" href="javascript:void(0);" role="tab" tabindex="0" aria-selected="true"
-					aria-controls="tab-scoped-2" id="tab-scoped-2__item">Item Two</a>
-			</li>
-			<li class="slds-tabs_scoped__item" title="Item Three" role="presentation">
-				<a class="slds-tabs_scoped__link" href="javascript:void(0);" role="tab" tabindex="-1" aria-selected="false"
-					aria-controls="tab-scoped-3" id="tab-scoped-3__item">Item Three</a>
-			</li>
-		</ul>
-		<div id="tab-scoped-1" class="slds-tabs_scoped__content slds-hide" role="tabpanel"
-			aria-labelledby="tab-scoped-1__item">Item One Content</div>
-		<div id="tab-scoped-2" class="slds-tabs_scoped__content slds-show" role="tabpanel"
-			aria-labelledby="tab-scoped-2__item">Item Two Content</div>
-		<div id="tab-scoped-3" class="slds-tabs_scoped__content slds-hide" role="tabpanel"
-			aria-labelledby="tab-scoped-3__item">Item Three Content</div>
 	</div>
 
 </template>
