--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
 				</template>
 			</ul>
 			<div id="tab-scoped" class="slds-tabs_scoped__content slds-show padding-content" role="tabpanel">
-				<c-table tabs={tabs}></c-table>
+				<c-table tabs={tabs} data={data} selected-tab={selectedTab}></c-table>
 			</div>
 
 		</div>
