--- a/src/cell.html
+++ b/src/cell.html
@@ -1,3 +1,5 @@
 <template>
-  {valueToShow}
+  <lightning-input class="width" type="text" label="-" variant="label-hidden" value={result.value}
+    onchange={itemChanged}>
+  </lightning-input>
 </template>
