--- a/src/table.html
+++ b/src/table.html
@@ -3,18 +3,18 @@
     <thead>
       <tr class="slds-line-height_reset">
         <template for:each={columns} for:item="column">
-          <th key={column.id} class="" scope="col">
+          <th key={column.id} class={column.class} scope="col">
             <div class="slds-truncate" title={column.name}>{column.name}</div>
           </th>
         </template>
       </tr>
     </thead>
     <tbody>
-      <template for:each={records} for:item="record">
+      <template for:each={data} for:item="record">
         <tr key={record.item} class="slds-hint-parent">
           <template for:each={columns} for:item="column">
-            <th key={column.id} class="" scope="col">
-              <c-cell record={record} column={column}></c-cell>
+            <th key={column.id} class={column.class} scope="col">
+              <c-cell record={record} column={column} oncellchange={handleCellChanged}></c-cell>
             </th>
           </template>
         </tr>
@@ -22,90 +22,4 @@
     </tbody>
   </table>
   <br/>
-
-
-  example
-  <table class="slds-table slds-table_cell-buffer table_bordered">
-    <thead>
-      <tr class="slds-line-height_reset">
-        <th class="" scope="col">
-          <div class="slds-truncate" title="Opportunity Name">Opportunity Name</div>
-        </th>
-        <th class="" scope="col">
-          <div class="slds-truncate" title="Account Name">Account Name</div>
-        </th>
-        <th class="" scope="col">
-          <div class="slds-truncate" title="Close Date">Close Date</div>
-        </th>
-        <th class="" scope="col">
-          <div class="slds-truncate" title="Stage">Stage</div>
-        </th>
-        <th class="" scope="col">
-          <div class="slds-truncate" title="Confidence">Confidence</div>
-        </th>
-        <th class="" scope="col">
-          <div class="slds-truncate" title="Amount">Amount</div>
-        </th>
-        <th class="" scope="col">
-          <div class="slds-truncate" title="Contact">Contact</div>
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr class="slds-hint-parent">
-        <th data-label="Opportunity Name" scope="row">
-          <div class="slds-truncate" title="Cloudhub">
-            <a href="#" tabindex="-1">Cloudhub</a>
-          </div>
-        </th>
-        <td data-label="Account Name">
-          <div class="slds-truncate" title="Cloudhub">Cloudhub</div>
-        </td>
-        <td data-label="Close Date">
-          <div class="slds-truncate" title="4/14/2015">4/14/2015</div>
-        </td>
-        <td data-label="Prospecting">
-          <div class="slds-truncate" title="Prospecting">Prospecting</div>
-        </td>
-        <td data-label="Confidence">
-          <div class="slds-truncate" title="20%">20%</div>
-        </td>
-        <td data-label="Amount">
-          <div class="slds-truncate" title="$25k">$25k</div>
-        </td>
-        <td data-label="Contact">
-          <div class="slds-truncate" title="jrogers@cloudhub.com">
-            <a href="#" tabindex="-1">jrogers@cloudhub.com</a>
-          </div>
-        </td>
-      </tr>
-      <tr class="slds-hint-parent">
-        <th data-label="Opportunity Name" scope="row">
-          <div class="slds-truncate" title="Cloudhub + Anypoint Connectors">
-            <a href="#" tabindex="-1">Cloudhub + Anypoint Connectors</a>
-          </div>
-        </th>
-        <td data-label="Account Name">
-          <div class="slds-truncate" title="Cloudhub">Cloudhub</div>
-        </td>
-        <td data-label="Close Date">
-          <div class="slds-truncate" title="4/14/2015">4/14/2015</div>
-        </td>
-        <td data-label="Prospecting">
-          <div class="slds-truncate" title="Prospecting">Prospecting</div>
-        </td>
-        <td data-label="Confidence">
-          <div class="slds-truncate" title="20%">20%</div>
-        </td>
-        <td data-label="Amount">
-          <div class="slds-truncate" title="$25k">$25k</div>
-        </td>
-        <td data-label="Contact">
-          <div class="slds-truncate" title="jrogers@cloudhub.com">
-            <a href="#" tabindex="-1">jrogers@cloudhub.com</a>
-          </div>
-        </td>
-      </tr>
-    </tbody>
-  </table>
 </template>
