--- a/src/table.html
+++ b/src/table.html
@@ -4,7 +4,7 @@
       <tr class="slds-line-height_reset">
         <template for:each={columns} for:item="column">
           <th key={column.id} class={column.class} scope="col">
-            <div class="slds-truncate" title={column.name}>{column.name}</div>
+            <div class="slds-truncate" title={column.label}>{column.label}</div>
           </th>
         </template>
       </tr>
