--- a/src/cell.html
+++ b/src/cell.html
@@ -7,7 +7,21 @@
 
   <template if:true={isPicklist}>
     <lightning-combobox class="fixed-width" label="-" variant="label-hidden" value={result.value}
-      options={picklistValues} onchange={handleChange}></lightning-combobox>
+      options={picklistValues} onchange={handlePicklistChange}></lightning-combobox>
+  </template>
+
+  <template if:true={isCheckbox}>
+    <template if:true={result.booleanValue}>
+      <lightning-input type="checkbox" label="-" variant="label-hidden" value={result.booleanValue}
+        onchange={itemChanged} checked>
+      </lightning-input>
+    </template>
+
+    <template if:false={result.booleanValue}>
+      <lightning-input type="checkbox" label="-" variant="label-hidden" value={result.booleanValue}
+        onchange={itemChanged}>
+      </lightning-input>
+    </template>
   </template>
 
   <template if:true={isInput}>
