--- a/src/table.html
+++ b/src/table.html
@@ -11,7 +11,7 @@
     </thead>
     <tbody>
       <template for:each={data} for:item="record">
-        <tr key={record.item} class="slds-hint-parent">
+        <tr key={record.id} class="slds-hint-parent">
           <template for:each={columns} for:item="column">
             <th key={column.id} class={column.class} scope="col">
               <c-cell record={record} column={column} oncellchange={handleCellChanged}></c-cell>
