--- a/src/table.html
+++ b/src/table.html
@@ -18,6 +18,17 @@
             </th>
           </template>
         </tr>
+
+        <template for:each={record.subitems} for:item="subrecord">
+          <tr key={subrecord.id} class="slds-hint-parent">
+            <template for:each={columns} for:item="column">
+              <th key={column.id} class={column.class} scope="col">
+                {subrecord.id}
+              </th>
+            </template>
+          </tr>
+        </template>
+
       </template>
     </tbody>
   </table>
