--- a/src/table.html
+++ b/src/table.html
@@ -2,11 +2,67 @@
   <table class="slds-table slds-table_cell-buffer table_bordered">
     <thead>
       <tr class="slds-line-height_reset">
+
         <template for:each={columns} for:item="column">
-          <th key={column.id} class={column.class} scope="col">
-            <div class="slds-truncate" title={column.label}>{column.label}</div>
-          </th>
+          <template if:true={column.sortable}>
+
+            <template if:false={column.sortedSelected}>
+              <th key={column.id} aria-label={column.label} aria-sort="none" class={column.class} scope="col">
+                <a class="slds-th__action slds-text-link_reset" href="javascript:void(0);"
+                  data-fieldpath={column.fieldpath} onclick={handleColumnClick} role="button">
+                  <span class="slds-assistive-text">Sort by: </span>
+                  <div class="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate">
+                    <span class="slds-truncate" title={column.label} >{column.label}</span>
+                    <lightning-icon icon-name="utility:arrowdown" alternative-text="Utility image" title="Image"
+                      size="xx-small" class="slds-is-sortable__icon">
+                    </lightning-icon>
+                  </div>
+                </a>
+              </th>
+            </template>
+
+            <template if:true={column.sortedSelected}>
+              <template if:true={column.isAsc}>
+                <th key={column.id} aria-label={column.label} aria-sort="ascending" class={column.class} scope="col">
+                  <a class="slds-th__action slds-text-link_reset slds-is-sorted slds-is-sorted_asc"
+                    href="javascript:void(0);" data-fieldpath={column.fieldpath} onclick={handleColumnClick}
+                    role="button">
+                    <span class="slds-assistive-text">Sort by: </span>
+                    <div class="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate">
+                      <span class="slds-truncate" title={column.label} >{column.label}</span>
+                      <lightning-icon icon-name="utility:arrowup" alternative-text="Utility image" title="Image"
+                        size="xx-small">
+                      </lightning-icon>
+                    </div>
+                  </a>
+                </th>
+              </template>
+
+              <template if:true={column.isDesc}>
+                <th key={column.id} aria-label={column.label} aria-sort="descending" class={column.class} scope="col">
+                  <a class="slds-th__action slds-text-link_reset slds-is-sorted slds-is-sorted_desc"
+                    href="javascript:void(0);" data-fieldpath={column.fieldpath} onclick={handleColumnClick}
+                    role="button">
+                    <span class="slds-assistive-text">Sort by: </span>
+                    <div class="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate">
+                      <span class="slds-truncate" title={column.label} >{column.label}</span>
+                      <lightning-icon icon-name="utility:arrowdown" alternative-text="Utility image" title="Image"
+                        size="xx-small">
+                      </lightning-icon>
+                    </div>
+                  </a>
+                </th>
+              </template>
+            </template>
+
+          </template>
+          <template if:false={column.sortable}>
+            <th key={column.id} class={column.class} scope="col">
+              <div class="slds-truncate" title={column.label}>{column.label}</div>
+            </th>
+          </template>
         </template>
+
       </tr>
     </thead>
     <tbody>
